--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "class-validator-mongo-object-id": "^1.3.0",
     "mongoose": "^6.9.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5"
