--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "class-validator-mongo-object-id": "^1.3.0",
     "mongoose": "^6.9.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "swagger-ui-express": "^4.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
